--- a/sass/Pages/_restaurants.scss
+++ b/sass/Pages/_restaurants.scss
@@ -61,20 +61,6 @@
             flex-direction: column;
             padding: 10px 0px 0px 10px;
             font-size: 1.1em;
-
-            & i{
-                position: absolute;
-                align-self: flex-end;
-                line-height: 0;
-                font-size: 1.2em;
-                margin: 20px 20px 0px 0px;
-                color: $color-primary;
-
-                &:hover {
-                    animation-name: heart-fill-up;
-                    animation-duration: 1000ms;
-                }
-            }
         }
         &__new {
             height: 30px;
@@ -98,3 +84,39 @@
         }
 }
 
+//ICONE COEUR//
+:root {
+    --pink: #FF79DA;
+    --dark-pink: #9356DC;
+}
+.icons {
+    position: absolute;
+    align-self: flex-end;
+    line-height: 0;
+    font-size: 1.2em;
+    margin: 20px 20px 0px 0px;
+    fill: transparent;
+    stroke: var(--dark-pink);
+    stroke-width: 2;
+}
+svg {
+   overflow: visible;
+}
+
+path {
+    stroke-dashoffset: 0;
+    stroke-dasharray: 1550;
+    transform-origin: center;
+}
+
+.heart_background {
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    stroke: none;
+}
+
+.heart_main:hover path {
+    animation: stroke-animation 2s ease-in-out forwards;
+}
