--- a/sass/Utils/_keyframes.scss
+++ b/sass/Utils/_keyframes.scss
@@ -1,3 +1,4 @@
+//ANIMATION
 @keyframes loading {
     0% {
         opacity: 0.10
@@ -13,6 +14,7 @@
     }
     100% { 
         transform: rotate(360deg); 
+        opacity: 0;
     }
   }
 
@@ -37,11 +39,39 @@
     }
 }
 
+//ANIMATION COCHE//
 @keyframes check-rotate {
     from {
         transform: rotate(0deg);
     }
     to {
         transform: rotate(360deg);
+    }
+}
+
+//ANIMATION COEUR//
+@keyframes stroke-animation {
+    0%{
+        stroke-dashoffset: 0;
+    }
+    30%{
+        stroke-dashoffset: 1550;
+    }
+    60%{
+        stroke-dashoffset: 3100;
+        fill: transparent;
+        transform: scale(1);
+    }
+    80%{
+        fill: var(--pink);
+        transform: scale(1.4);
+    }
+    90%{
+        transform: scale(1);
+    }
+    100%{
+        stroke-dashoffset: 3100;
+        fill: var(--pink);
+        stroke: var(--pink);
     }
 }
