Ajout des animations de validation et de coeur sur tous les menus + lien vers mail sur contact

--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -16,6 +16,10 @@ footer {
             gap: 8px;
             list-style: none;
             padding: 20px;
+            & a {
+                color: white;
+                text-decoration: none;
+            }
         }
         //ELEMENTS//
         li i{
