--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,88 +1,122 @@
 .menu__box a:nth-child(1) {
-  animation-delay: 0.3s; }
+  animation-delay: 0.3s;
+}
 
 .menu__box a:nth-child(2) {
-  animation-delay: 0.6s; }
+  animation-delay: 0.6s;
+}
 
 .menu__box a:nth-child(3) {
-  animation-delay: 0.9s; }
+  animation-delay: 0.9s;
+}
 
 .menu__box a:nth-child(4) {
-  animation-delay: 1.2s; }
+  animation-delay: 1.2s;
+}
 
 .menu__box a:nth-child(5) {
-  animation-delay: 1.5s; }
+  animation-delay: 1.5s;
+}
 
 .menu__box a:nth-child(6) {
-  animation-delay: 1.8s; }
+  animation-delay: 1.8s;
+}
 
 .menu__box a:nth-child(7) {
-  animation-delay: 2.1s; }
+  animation-delay: 2.1s;
+}
 
 .menu__box a:nth-child(8) {
-  animation-delay: 2.4s; }
+  animation-delay: 2.4s;
+}
 
 .menu__box a:nth-child(9) {
-  animation-delay: 2.7s; }
+  animation-delay: 2.7s;
+}
 
 @keyframes loading {
   0% {
-    opacity: 0.1; }
+    opacity: 0.1;
+  }
   100% {
-    opacity: 1; } }
+    opacity: 1;
+  }
+}
 @keyframes spin {
   0% {
-    transform: rotate(0deg); }
+    transform: rotate(0deg);
+  }
   100% {
     transform: rotate(360deg);
-    opacity: 0; } }
+    opacity: 0;
+  }
+}
 @keyframes fade-in {
   0% {
     opacity: 0;
     transform-origin: bottom;
-    transform: translateY(15px); }
+    transform: translateY(15px);
+  }
   100% {
     opacity: 1;
-    transform: translateY(0px); } }
+    transform: translateY(0px);
+  }
+}
 @keyframes check-in {
   from {
-    width: 0%; }
+    width: 0%;
+  }
   to {
-    width: 20%; } }
+    width: 20%;
+  }
+}
 @keyframes check-rotate {
   from {
-    transform: rotate(0deg); }
+    transform: rotate(0deg);
+  }
   to {
-    transform: rotate(360deg); } }
+    transform: rotate(360deg);
+  }
+}
 @keyframes stroke-animation {
   0% {
-    stroke-dashoffset: 0; }
+    stroke-dashoffset: 0;
+  }
   30% {
-    stroke-dashoffset: 1550; }
+    stroke-dashoffset: 1550;
+  }
   60% {
     stroke-dashoffset: 3100;
     fill: transparent;
-    transform: scale(1); }
+    transform: scale(1);
+  }
   80% {
     fill: var(--pink);
-    transform: scale(1.4); }
+    transform: scale(1.4);
+  }
   90% {
-    transform: scale(1); }
+    transform: scale(1);
+  }
   100% {
     stroke-dashoffset: 3100;
     fill: var(--pink);
-    stroke: var(--pink); } }
+    stroke: var(--pink);
+  }
+}
 * {
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
-  margin: 0; }
+  margin: 0;
+}
 
 header {
   display: flex;
   justify-content: center;
-  padding: 30px 0px 15px 0px; }
-  header img {
-    width: 50%; }
+  padding: 30px 0px 15px 0px;
+}
+header img {
+  width: 50%;
+}
 
 form {
   display: flex;
@@ -90,65 +124,85 @@ form {
   align-items: center;
   background-color: #EAEAEA;
   border-top: 3px solid #d1d1d1;
-  height: 50px; }
-  form i {
-    padding-right: 5%; }
+  height: 50px;
+}
+form i {
+  padding-right: 5%;
+}
 
 input[type=search] {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   background-color: #EAEAEA;
   border: none;
   width: 40%;
   font-weight: bold;
   font-size: 1.1em;
-  text-align: center; }
-  input[type=search]:active {
-    border: none; }
+  text-align: center;
+}
+input[type=search]:active {
+  border: none;
+}
 
 footer {
   padding-bottom: 20px;
   background-color: #353535;
-  color: white; }
-  footer h4 {
-    font-family: "Shrikhand", cursive;
-    font-weight: lighter;
-    font-size: 1.2em;
-    padding: 25px 0px 0px 20px; }
-  footer ul {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    list-style: none;
-    padding: 20px; }
-  footer li i {
-    padding-right: 10px; }
+  color: white;
+}
+footer h4 {
+  font-family: "Shrikhand", cursive;
+  font-weight: lighter;
+  font-size: 1.2em;
+  padding: 25px 0px 0px 20px;
+}
+footer ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  list-style: none;
+  padding: 20px;
+}
+footer ul a {
+  color: white;
+  text-decoration: none;
+}
+footer li i {
+  padding-right: 10px;
+}
 
 .research {
-  text-align: center; }
-  .research__box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 100px 50px 50px 50px;
-    gap: 30px;
-    height: 300px;
-    background-color: #F6F6F6; }
-  .research__btn button {
-    box-shadow: 3px 3px 5px #D8D8D8;
-    border: none;
-    height: 50px;
-    padding: 0px 25px 0px 25px;
-    margin-bottom: 60px;
-    border-radius: 25px 25px 25px 25px;
-    color: white;
-    font-size: 1em;
-    font-weight: bold;
-    background: linear-gradient(to bottom right, #FF79DA, #9356DC); }
-    .research__btn button:hover {
-      background: linear-gradient(to bottom right, #ae80e5, #fface8);
-      box-shadow: 3px 3px 5px #b2b2b2; }
-  .research h2 {
-    padding-bottom: 30px; }
+  text-align: center;
+}
+.research__box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 50px 50px 50px;
+  gap: 30px;
+  height: 300px;
+  background-color: #F6F6F6;
+}
+.research__btn button {
+  box-shadow: 3px 3px 5px #D8D8D8;
+  border: none;
+  height: 50px;
+  padding: 0px 25px 0px 25px;
+  margin-bottom: 60px;
+  border-radius: 25px 25px 25px 25px;
+  color: white;
+  font-size: 1em;
+  font-weight: bold;
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+}
+.research__btn button:hover {
+  background: linear-gradient(to bottom right, #ae80e5, #fface8);
+  box-shadow: 3px 3px 5px #b2b2b2;
+}
+.research h2 {
+  padding-bottom: 30px;
+}
 
 .functioning {
   display: flex;
@@ -156,83 +210,99 @@ footer {
   gap: 30px;
   height: 400px;
   width: 100%;
-  margin-top: 30px; }
-  .functioning h2 {
-    font-weight: bold;
-    font-size: 1.3em;
-    padding: 20px 0px 0px 20px; }
-  .functioning button {
-    box-shadow: 3px 3px 5px #D8D8D8;
-    border: none;
-    height: 70px;
-    width: 90%;
-    background-color: #F6F6F6;
-    border-radius: 25px 25px 25px 25px;
-    font-weight: bold;
-    font-size: 1em; }
-    .functioning button:active {
-      background-color: #F5EDFF; }
-      .functioning button:active i {
-        color: #9356DC; }
-  .functioning__btn-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    gap: 30px; }
-  .functioning__numbers {
-    width: 20px;
-    border: 1px solid #9356DC;
-    border-radius: 50%;
-    text-align: center;
-    color: white;
-    background-color: #9356DC;
-    margin-left: -15px; }
-  .functioning i {
-    color: #7E7E7E;
-    margin-left: 8%; }
-  .functioning h4 {
-    flex-grow: 4;
-    margin-right: 15%; }
-  .functioning .element-1 {
-    display: flex;
-    justify-content: center;
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-around; }
-    .functioning .element-1 i {
-      font-size: 1.20em; }
-  .functioning .element-2 {
-    display: flex;
-    justify-content: center;
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-around; }
-    .functioning .element-2 i {
-      font-size: 1.15em; }
-  .functioning .element-3 {
-    display: flex;
-    justify-content: center;
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-around; }
-    .functioning .element-3 i {
-      font-size: 1.20em; }
+  margin-top: 30px;
+}
+.functioning h2 {
+  font-weight: bold;
+  font-size: 1.3em;
+  padding: 20px 0px 0px 20px;
+}
+.functioning button {
+  box-shadow: 3px 3px 5px #D8D8D8;
+  border: none;
+  height: 70px;
+  width: 90%;
+  background-color: #F6F6F6;
+  border-radius: 25px 25px 25px 25px;
+  font-weight: bold;
+  font-size: 1em;
+}
+.functioning button:active {
+  background-color: #F5EDFF;
+}
+.functioning button:active i {
+  color: #9356DC;
+}
+.functioning__btn-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 30px;
+}
+.functioning__numbers {
+  width: 20px;
+  border: 1px solid #9356DC;
+  border-radius: 50%;
+  text-align: center;
+  color: white;
+  background-color: #9356DC;
+  margin-left: -15px;
+}
+.functioning i {
+  color: #7E7E7E;
+  margin-left: 8%;
+}
+.functioning h4 {
+  flex-grow: 4;
+  margin-right: 15%;
+}
+.functioning .element-1 {
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
+}
+.functioning .element-1 i {
+  font-size: 1.2em;
+}
+.functioning .element-2 {
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
+}
+.functioning .element-2 i {
+  font-size: 1.15em;
+}
+.functioning .element-3 {
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
+}
+.functioning .element-3 i {
+  font-size: 1.2em;
+}
 
 .loading_header, .research, .functioning, .restaurants, .loading_footer {
   position: relative;
   animation-name: loading;
-  animation-duration: 5s; }
+  animation-duration: 5s;
+}
 
 #progress {
   overflow: hidden;
@@ -246,16 +316,19 @@ footer {
   margin: 5% auto;
   top: 40%;
   left: 0;
-  right: 0; }
+  right: 0;
+}
 
 .restaurants {
   display: flex;
   flex-direction: column;
-  background-color: #F6F6F6; }
-  .restaurants__title {
-    font-weight: bold;
-    padding: 20px 0px 0px 20px;
-    margin-top: 30px; }
+  background-color: #F6F6F6;
+}
+.restaurants__title {
+  font-weight: bold;
+  padding: 20px 0px 0px 20px;
+  margin-top: 30px;
+}
 
 .cards {
   display: flex;
@@ -263,7 +336,8 @@ footer {
   margin-top: 20px;
   padding-bottom: 70px;
   align-items: center;
-  gap: 20px; }
+  gap: 20px;
+}
 
 .cards-rest {
   box-shadow: 3px 3px 5px #D8D8D8;
@@ -271,40 +345,46 @@ footer {
   height: 250px;
   width: 90%;
   border-radius: 25px 25px 25px 25px;
-  position: relative; }
-  .cards-rest__img {
-    object-fit: cover;
-    height: 70%;
-    width: 100%;
-    border-radius: 25px 25px 0px 0px; }
-  .cards-rest__txt-box {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 10px 0px 0px 10px;
-    font-size: 1.1em; }
-  .cards-rest__new {
-    height: 30px;
-    width: 80px;
-    font-size: 0.7em;
-    font-weight: bold;
-    line-height: 30px;
-    text-align: center;
-    background-color: #99E2D0;
-    color: #278870;
-    border-radius: 2px;
-    box-shadow: 2px 2px 6px grey;
-    position: absolute;
-    align-self: flex-end;
-    margin-top: -170px;
-    margin-right: 20px; }
-  .cards-rest a {
-    text-decoration: none;
-    color: black; }
+  position: relative;
+}
+.cards-rest__img {
+  object-fit: cover;
+  height: 70%;
+  width: 100%;
+  border-radius: 25px 25px 0px 0px;
+}
+.cards-rest__txt-box {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0px 0px 10px;
+  font-size: 1.1em;
+}
+.cards-rest__new {
+  height: 30px;
+  width: 80px;
+  font-size: 0.7em;
+  font-weight: bold;
+  line-height: 30px;
+  text-align: center;
+  background-color: #99E2D0;
+  color: #278870;
+  border-radius: 2px;
+  box-shadow: 2px 2px 6px grey;
+  position: absolute;
+  align-self: flex-end;
+  margin-top: -170px;
+  margin-right: 20px;
+}
+.cards-rest a {
+  text-decoration: none;
+  color: black;
+}
 
 :root {
   --pink: #FF79DA;
-  --dark-pink: #9356DC; }
+  --dark-pink: #9356DC;
+}
 
 .icons {
   position: absolute;
@@ -314,48 +394,59 @@ footer {
   margin: 20px 20px 0px 0px;
   fill: transparent;
   stroke: var(--dark-pink);
-  stroke-width: 2; }
+  stroke-width: 2;
+}
 
 svg {
-  overflow: visible; }
+  overflow: visible;
+}
 
 path {
   stroke-dashoffset: 0;
   stroke-dasharray: 1550;
-  transform-origin: center; }
+  transform-origin: center;
+}
 
 .heart_background {
   position: absolute;
   left: 0;
   right: 0;
   z-index: -1;
-  stroke: none; }
+  stroke: none;
+}
 
 .heart_main:hover path {
-  animation: stroke-animation 2s ease-in-out forwards; }
+  animation: stroke-animation 2s ease-in-out forwards;
+}
 
 .header-rest {
   display: flex;
   flex-direction: column;
-  align-items: center; }
-  .header-rest__box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%; }
-    .header-rest__box a {
-      padding-left: 20px; }
-    .header-rest__box i {
-      font-size: 1.5em; }
-  .header-rest__logo {
-    margin-right: 23%; }
-  .header-rest__img {
-    margin-top: 25px;
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-    position: relative;
-    z-index: 0; }
+  align-items: center;
+}
+.header-rest__box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.header-rest__box a {
+  padding-left: 20px;
+}
+.header-rest__box i {
+  font-size: 1.5em;
+}
+.header-rest__logo {
+  margin-right: 23%;
+}
+.header-rest__img {
+  margin-top: 25px;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  position: relative;
+  z-index: 0;
+}
 
 .menu {
   border-top-left-radius: 25px;
@@ -363,125 +454,151 @@ path {
   position: relative;
   background-color: #F6F6F6;
   padding: 0px 20px 50px 20px;
-  margin-top: -55px; }
-  .menu__title {
-    display: flex;
-    flex-direction: row; }
-    .menu__title h1 {
-      font-family: "Shrikhand", cursive;
-      font-size: 1.8em;
-      padding: 25px 30px 0px 0px; }
-  .menu__heart {
-    padding-top: 25px;
-    width: 24px; }
-  .menu__subtitle {
-    margin-top: 30px;
-    margin-bottom: 15px;
-    font-weight: 400; }
-    .menu__subtitle:after {
-      content: "";
-      display: block;
-      position: relative;
-      width: 12%;
-      border-bottom: 2px solid #99E2D0;
-      margin-top: 3px; }
-  .menu__box {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    margin-bottom: 30px; }
-    .menu__box--btn {
-      box-shadow: 3px 3px 5px #D8D8D8;
-      overflow: hidden;
-      text-decoration: none;
-      color: black;
-      display: flex;
-      flex-direction: row;
-      background-color: white;
-      border-radius: 15px;
-      height: 60px;
-      width: 100%;
-      padding: 10px 20px 10px 10px;
-      opacity: 0;
-      animation-name: fade-in;
-      animation-duration: 2000ms;
-      animation-fill-mode: forwards; }
-    .menu__box--content {
-      display: flex;
-      flex-direction: column;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      width: 100%;
-      transition: width 1s ease-in-out; }
-      .menu__box--content:hover {
-        width: 75%; }
-      .menu__box--content:hover .menu__box--misc, .menu__box--content .menu__box--plat {
-        width: 80%; }
-      .menu__box--content:hover + .menu__box--validate {
-        width: 25%; }
-      .menu__box--content:hover + .menu__box--validate i {
-        animation-name: check-rotate;
-        animation-duration: 600ms;
-        animation-fill-mode: forwards; }
-    .menu__box--sub {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      width: 100%; }
-    .menu__box--plat {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      font-size: 1.1em;
-      font-weight: bold;
-      align-self: flex-start; }
-    .menu__box--misc {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      font-size: .9em;
-      position: relative;
-      max-width: 250px; }
-    .menu__box--prix {
-      font-weight: bold;
-      align-self: flex-end; }
-    .menu__box--validate {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #99E2D0;
-      border-radius: 0 15px 15px 0;
-      height: 60px;
-      margin: -10px -21px 0px 20px;
-      width: 0%;
-      transition: width 1s ease-in-out; }
-      .menu__box--validate i {
-        color: white; }
-  .menu__box button {
-    box-shadow: 3px 3px 5px #D8D8D8;
-    border: none;
-    background-color: white;
-    width: 95%;
-    border-radius: 15px; }
+  margin-top: -55px;
+}
+.menu__title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.menu__title h1 {
+  font-family: "Shrikhand", cursive;
+  font-size: 1.8em;
+  padding: 25px 30px 0px 0px;
+}
+.menu__heart {
+  display: flex;
+  width: 87%;
+  justify-content: flex-end;
+  padding-bottom: 12px;
+}
+.menu__subtitle {
+  margin-top: 30px;
+  margin-bottom: 15px;
+  font-weight: 400;
+}
+.menu__subtitle:after {
+  content: "";
+  display: block;
+  position: relative;
+  width: 12%;
+  border-bottom: 2px solid #99E2D0;
+  margin-top: 3px;
+}
+.menu__box {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-bottom: 30px;
+}
+.menu__box--btn {
+  box-shadow: 3px 3px 5px #D8D8D8;
+  overflow: hidden;
+  text-decoration: none;
+  color: black;
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+  border-radius: 15px;
+  height: 60px;
+  width: 100%;
+  padding: 10px 20px 10px 10px;
+  opacity: 0;
+  animation-name: fade-in;
+  animation-duration: 2000ms;
+  animation-fill-mode: forwards;
+}
+.menu__box--content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  transition: width 500ms ease-in-out;
+}
+.menu__box--content:hover {
+  width: 75%;
+}
+.menu__box--content:hover .menu__box--misc, .menu__box--content .menu__box--plat {
+  width: 80%;
+}
+.menu__box--content:hover + .menu__box--validate {
+  width: 25%;
+}
+.menu__box--content:hover + .menu__box--validate i {
+  animation-name: check-rotate;
+  animation-duration: 600ms;
+  animation-fill-mode: forwards;
+}
+.menu__box--sub {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+.menu__box--plat {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 1.1em;
+  font-weight: bold;
+  align-self: flex-start;
+}
+.menu__box--misc {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 0.9em;
+  position: relative;
+  max-width: 250px;
+}
+.menu__box--prix {
+  font-weight: bold;
+  align-self: flex-end;
+}
+.menu__box--validate {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #99E2D0;
+  border-radius: 0 15px 15px 0;
+  height: 60px;
+  margin: -10px -21px 0px 20px;
+  width: 0%;
+  transition: width 500ms ease-in-out;
+}
+.menu__box--validate i {
+  color: white;
+}
+.menu__box button {
+  box-shadow: 3px 3px 5px #D8D8D8;
+  border: none;
+  background-color: white;
+  width: 95%;
+  border-radius: 15px;
+}
 
 .order {
   display: flex;
   justify-content: center;
   margin-top: 40px;
-  padding-right: 20px; }
-  .order--btn {
-    box-shadow: 3px 3px 5px #D8D8D8;
-    height: 50px;
-    width: 180px;
-    text-align: center;
-    padding-top: 15px;
-    border: none;
-    border-radius: 25px;
-    color: white;
-    font-size: 1em;
-    background: linear-gradient(to bottom right, #FF79DA, #9356DC); }
-    .order--btn:hover {
-      background: linear-gradient(to bottom right, #ae80e5, #fface8);
-      box-shadow: 3px 3px 5px #b2b2b2; }
+  padding-right: 20px;
+}
+.order--btn {
+  box-shadow: 3px 3px 5px #D8D8D8;
+  height: 50px;
+  width: 180px;
+  text-align: center;
+  padding-top: 15px;
+  border: none;
+  border-radius: 25px;
+  color: white;
+  font-size: 1em;
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+}
+.order--btn:hover {
+  background: linear-gradient(to bottom right, #ae80e5, #fface8);
+  box-shadow: 3px 3px 5px #b2b2b2;
+}
 
 /*# sourceMappingURL=style.css.map */
