--- a/sass/Pages/_menu.scss
+++ b/sass/Pages/_menu.scss
@@ -8,6 +8,7 @@
     &__title {
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         & h1 {
             font-family: $font-shrikhand;
             font-size: 1.8em;
@@ -15,8 +16,10 @@
         }
     }
     &__heart {
-        padding-top: 25px;
-        width: 24px;
+        display: flex;
+        width: 87%;
+        justify-content: flex-end;
+        padding-bottom: 12px;
     }
     &__subtitle {
             margin-top: 30px;
@@ -60,7 +63,7 @@
             flex-wrap: wrap;
             justify-content: space-between;   
             width: 100%;
-            transition: width 1s ease-in-out;
+            transition: width 500ms ease-in-out;
             //EFFET SLIDE IN CONTENEUR VERT//
             &:hover{
                 width: 75%;
@@ -111,7 +114,7 @@
             height: 60px;
             margin: -10px -21px 0px 20px;
             width: 0%;
-            transition: width 1s ease-in-out;
+            transition: width 500ms ease-in-out;
             & i {
                 color: white;
             }
