Responsive format desktop page d'accueil

--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -5,6 +5,9 @@ footer {
     color: white;
         //TITRE//
         h4{
+            @include desktop-only {
+                text-align: center;
+            }
             font-family: $font-shrikhand;
             font-weight: lighter;
             font-size: 1.2em;
@@ -13,6 +16,10 @@ footer {
         //CONTENEUR//
         ul {
             @include flex-column;
+            @include desktop-only {
+                flex-direction: row;
+                justify-content: center;
+            }
             gap: 8px;
             list-style: none;
             padding: 20px;
