--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,6 +117,11 @@ header {
 header img {
   width: 50%;
 }
+@media screen and (min-width: 1024px) {
+  header img {
+    width: 15%;
+  }
+}
 
 form {
   display: flex;
@@ -128,6 +133,12 @@ form {
 }
 form i {
   padding-right: 5%;
+}
+@media screen and (min-width: 768px) {
+  form i {
+    position: absolute;
+    margin-right: 150px;
+  }
 }
 
 input[type=search] {
@@ -141,8 +152,10 @@ input[type=search] {
   font-size: 1.1em;
   text-align: center;
 }
-input[type=search]:active {
-  border: none;
+@media screen and (min-width: 768px) {
+  input[type=search] {
+    width: 15%;
+  }
 }
 
 footer {
@@ -156,6 +169,11 @@ footer h4 {
   font-size: 1.2em;
   padding: 25px 0px 0px 20px;
 }
+@media screen and (min-width: 1024px) {
+  footer h4 {
+    text-align: center;
+  }
+}
 footer ul {
   display: flex;
   flex-direction: column;
@@ -163,12 +181,47 @@ footer ul {
   list-style: none;
   padding: 20px;
 }
+@media screen and (min-width: 1024px) {
+  footer ul {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
 footer ul a {
   color: white;
   text-decoration: none;
 }
 footer li i {
   padding-right: 10px;
+}
+
+.header-rest {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.header-rest__box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.header-rest__box a {
+  padding-left: 20px;
+}
+.header-rest__box i {
+  font-size: 1.5em;
+}
+.header-rest__logo {
+  margin-right: 23%;
+}
+.header-rest__img {
+  margin-top: 25px;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  position: relative;
+  z-index: 0;
 }
 
 .research {
@@ -212,10 +265,24 @@ footer li i {
   width: 100%;
   margin-top: 30px;
 }
+@media screen and (min-width: 1024px) {
+  .functioning {
+    margin: auto;
+    position: relative;
+    height: 230px;
+  }
+}
 .functioning h2 {
   font-weight: bold;
   font-size: 1.3em;
   padding: 20px 0px 0px 20px;
+}
+@media screen and (min-width: 1024px) {
+  .functioning h2 {
+    font-size: 1.5em;
+    padding: 50px 0px 0px 20px;
+    position: relative;
+  }
 }
 .functioning button {
   box-shadow: 3px 3px 5px #D8D8D8;
@@ -240,6 +307,15 @@ footer li i {
   justify-content: center;
   width: 100%;
   gap: 30px;
+}
+@media screen and (min-width: 1024px) {
+  .functioning__btn-box {
+    flex-direction: row;
+    align-self: center;
+    padding: 0;
+    margin: 0px 20px 0px 20px;
+    gap: 40px;
+  }
 }
 .functioning__numbers {
   width: 20px;
@@ -297,6 +373,11 @@ footer li i {
 .functioning .element-3 i {
   font-size: 1.2em;
 }
+@media screen and (min-width: 1024px) {
+  .functioning .element {
+    width: 30%;
+  }
+}
 
 .loading_header, .research, .functioning, .restaurants, .loading_footer {
   position: relative;
@@ -337,6 +418,12 @@ footer li i {
   padding-bottom: 70px;
   align-items: center;
   gap: 20px;
+}
+@media screen and (min-width: 1024px) {
+  .cards {
+    flex-direction: row;
+    margin: 20px 20px 0px 20px;
+  }
 }
 
 .cards-rest {
@@ -417,35 +504,6 @@ path {
 
 .heart_main:hover path {
   animation: stroke-animation 2s ease-in-out forwards;
-}
-
-.header-rest {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.header-rest__box {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
-.header-rest__box a {
-  padding-left: 20px;
-}
-.header-rest__box i {
-  font-size: 1.5em;
-}
-.header-rest__logo {
-  margin-right: 23%;
-}
-.header-rest__img {
-  margin-top: 25px;
-  width: 100%;
-  height: 250px;
-  object-fit: cover;
-  position: relative;
-  z-index: 0;
 }
 
 .menu {
