--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -4,6 +4,9 @@ header {
     justify-content: center;
     padding: 30px 0px 15px 0px;
         img {
+            @include desktop-only {
+                width: 15%;
+            }
             width: 50%;
         }
 }
