--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,11 +8,11 @@
 @import "./Layout/header";
 @import "./Layout/form";
 @import "./Layout/footer";
+@import "./Layout/header-rest";
 //PAGES//
 @import "./Pages/research";
 @import "./Pages/functioning";
 @import "./Pages/restaurants";
-@import "./Pages/header-rest";
 @import "./Pages/menu";
 //COMPOSANTS//
 @import "./Composants/order-btn";
