--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,7 +119,7 @@ header img {
 }
 @media screen and (min-width: 1024px) {
   header img {
-    width: 15%;
+    width: 20em;
   }
 }
 
@@ -215,6 +215,11 @@ footer li i {
 .header-rest__logo {
   margin-right: 23%;
 }
+@media screen and (min-width: 1024px) {
+  .header-rest__logo {
+    margin: auto;
+  }
+}
 .header-rest__img {
   margin-top: 25px;
   width: 100%;
@@ -222,6 +227,11 @@ footer li i {
   object-fit: cover;
   position: relative;
   z-index: 0;
+}
+@media screen and (min-width: 1024px) {
+  .header-rest__img {
+    height: 450px;
+  }
 }
 
 .research {
@@ -281,7 +291,9 @@ footer li i {
   .functioning h2 {
     font-size: 1.5em;
     padding: 50px 0px 0px 20px;
+    max-width: 1280px;
     position: relative;
+    margin: auto;
   }
 }
 .functioning button {
@@ -312,8 +324,10 @@ footer li i {
   .functioning__btn-box {
     flex-direction: row;
     align-self: center;
-    padding: 0;
-    margin: 0px 20px 0px 20px;
+    padding-bottom: 80px;
+    max-width: 1280px;
+    position: relative;
+    margin: auto;
     gap: 40px;
   }
 }
@@ -405,10 +419,25 @@ footer li i {
   flex-direction: column;
   background-color: #F6F6F6;
 }
+@media screen and (min-width: 1024px) {
+  .restaurants {
+    margin: auto;
+    position: relative;
+  }
+}
 .restaurants__title {
   font-weight: bold;
   padding: 20px 0px 0px 20px;
   margin-top: 30px;
+}
+@media screen and (min-width: 1024px) {
+  .restaurants__title {
+    width: 100%;
+    max-width: 1280px;
+    position: relative;
+    margin: auto;
+    padding: 50px 0px 40px 25px;
+  }
 }
 
 .cards {
@@ -422,7 +451,11 @@ footer li i {
 @media screen and (min-width: 1024px) {
   .cards {
     flex-direction: row;
-    margin: 20px 20px 0px 20px;
+    flex-wrap: wrap;
+    margin: auto;
+    padding-left: 50px;
+    max-width: 1280px;
+    gap: 50px;
   }
 }
 
@@ -433,6 +466,11 @@ footer li i {
   width: 90%;
   border-radius: 25px 25px 25px 25px;
   position: relative;
+}
+@media screen and (min-width: 1024px) {
+  .cards-rest {
+    width: 45%;
+  }
 }
 .cards-rest__img {
   object-fit: cover;
@@ -530,10 +568,20 @@ path {
   justify-content: flex-end;
   padding-bottom: 12px;
 }
+@media screen and (min-width: 1024px) {
+  .menu__heart {
+    width: 95%;
+  }
+}
 .menu__subtitle {
   margin-top: 30px;
   margin-bottom: 15px;
   font-weight: 400;
+}
+@media screen and (min-width: 1024px) {
+  .menu__subtitle {
+    font-size: 1.4em;
+  }
 }
 .menu__subtitle:after {
   content: "";
@@ -543,11 +591,21 @@ path {
   border-bottom: 2px solid #99E2D0;
   margin-top: 3px;
 }
+@media screen and (min-width: 1024px) {
+  .menu__subtitle:after {
+    width: 50%;
+  }
+}
 .menu__box {
   display: flex;
   flex-direction: column;
   gap: 15px;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 1024px) {
+  .menu__box {
+    width: 30%;
+  }
 }
 .menu__box--btn {
   box-shadow: 3px 3px 5px #D8D8D8;
@@ -573,6 +631,11 @@ path {
   justify-content: space-between;
   width: 100%;
   transition: width 500ms ease-in-out;
+}
+@media screen and (min-width: 1024px) {
+  .menu__box--content {
+    flex-direction: unset;
+  }
 }
 .menu__box--content:hover {
   width: 75%;
@@ -635,12 +698,26 @@ path {
   width: 95%;
   border-radius: 15px;
 }
+@media screen and (min-width: 1024px) {
+  .menu__wrapper {
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    gap: 50px;
+  }
+}
 
 .order {
   display: flex;
   justify-content: center;
   margin-top: 40px;
   padding-right: 20px;
+}
+@media screen and (min-width: 1024px) {
+  .order {
+    padding-right: 0;
+    margin-left: 20px;
+  }
 }
 .order--btn {
   box-shadow: 3px 3px 5px #D8D8D8;
@@ -653,6 +730,11 @@ path {
   color: white;
   font-size: 1em;
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+}
+@media screen and (min-width: 1024px) {
+  .order--btn {
+    width: 300px;
+  }
 }
 .order--btn:hover {
   background: linear-gradient(to bottom right, #ae80e5, #fface8);
