--- a/sass/Composants/_order-btn.scss
+++ b/sass/Composants/_order-btn.scss
@@ -1,11 +1,18 @@
 // BOUTON COMMANDER //
 .order {
+    @include desktop-only {
+        padding-right: 0;
+        margin-left: 20px;
+    }
     display: flex;
     justify-content: center;
     margin-top: 40px;
     padding-right: 20px;
     &--btn {
         @include button-shadow($color-shadow);
+        @include desktop-only {
+            width: 300px;
+        }
         height: 50px;
         width: 180px;
         text-align: center;
