--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -5,7 +5,7 @@ header {
     padding: 30px 0px 15px 0px;
         img {
             @include desktop-only {
-                width: 15%;
+                width: 20em;
             }
             width: 50%;
         }
