--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,6 +122,11 @@ header img {
     width: 20em;
   }
 }
+@media screen and (min-width: 768px) {
+  header img {
+    width: 15em;
+  }
+}
 
 form {
   display: flex;
@@ -174,6 +179,11 @@ footer h4 {
     text-align: center;
   }
 }
+@media screen and (min-width: 768px) {
+  footer h4 {
+    text-align: center;
+  }
+}
 footer ul {
   display: flex;
   flex-direction: column;
@@ -183,6 +193,13 @@ footer ul {
 }
 @media screen and (min-width: 1024px) {
   footer ul {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  footer ul {
+    display: flex;
     flex-direction: row;
     justify-content: center;
   }
@@ -220,6 +237,11 @@ footer li i {
     margin: auto;
   }
 }
+@media screen and (min-width: 768px) {
+  .header-rest__logo {
+    margin: auto;
+  }
+}
 .header-rest__img {
   margin-top: 25px;
   width: 100%;
@@ -231,6 +253,11 @@ footer li i {
 @media screen and (min-width: 1024px) {
   .header-rest__img {
     height: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header-rest__img {
+    height: 400px;
   }
 }
 
@@ -458,6 +485,12 @@ footer li i {
     gap: 50px;
   }
 }
+@media screen and (min-width: 768px) {
+  .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
 
 .cards-rest {
   box-shadow: 3px 3px 5px #D8D8D8;
@@ -470,6 +503,12 @@ footer li i {
 @media screen and (min-width: 1024px) {
   .cards-rest {
     width: 45%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .cards-rest {
+    width: 45%;
+    margin: auto;
   }
 }
 .cards-rest__img {
@@ -571,6 +610,11 @@ path {
 @media screen and (min-width: 1024px) {
   .menu__heart {
     width: 95%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu__heart {
+    width: 92%;
   }
 }
 .menu__subtitle {
@@ -719,6 +763,12 @@ path {
     margin-left: 20px;
   }
 }
+@media screen and (min-width: 768px) {
+  .order {
+    padding-right: 0;
+    margin-left: 20px;
+  }
+}
 .order--btn {
   box-shadow: 3px 3px 5px #D8D8D8;
   height: 50px;
@@ -732,6 +782,11 @@ path {
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
 }
 @media screen and (min-width: 1024px) {
+  .order--btn {
+    width: 200px;
+  }
+}
+@media screen and (min-width: 768px) {
   .order--btn {
     width: 300px;
   }
