--- a/sass/Composants/_order-btn.scss
+++ b/sass/Composants/_order-btn.scss
@@ -4,6 +4,10 @@
         padding-right: 0;
         margin-left: 20px;
     }
+    @include tablet-only {
+        padding-right: 0;
+        margin-left: 20px;
+    }
     display: flex;
     justify-content: center;
     margin-top: 40px;
@@ -11,6 +15,9 @@
     &--btn {
         @include button-shadow($color-shadow);
         @include desktop-only {
+            width: 200px;
+        }
+        @include tablet-only {
             width: 300px;
         }
         height: 50px;
