--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -8,6 +8,9 @@ footer {
             @include desktop-only {
                 text-align: center;
             }
+            @include tablet-only {
+                text-align: center;
+            }
             font-family: $font-shrikhand;
             font-weight: lighter;
             font-size: 1.2em;
@@ -19,6 +22,9 @@ footer {
             @include desktop-only {
                 flex-direction: row;
                 justify-content: center;
+            }
+            @include tablet-only {
+                @include flex-row;
             }
             gap: 8px;
             list-style: none;
