--- a/sass/Pages/_functioning.scss
+++ b/sass/Pages/_functioning.scss
@@ -21,6 +21,9 @@
                 position: relative;
                 margin: auto;
             }
+            @include tablet-only {
+                font-size: 1.5em;
+            }
             font-weight: bold;
             font-size: 1.3em;
             padding: 20px 0px 0px 20px;
