Amélioration de l'indentation et rajout de commentaires

--- a/sass/Pages/_functioning.scss
+++ b/sass/Pages/_functioning.scss
@@ -108,7 +108,7 @@
                 font-size: 1.20em;
             }
     }
-
+    //TAILLES ELEMENTS RESPONSIVE//
     .element {
         @include desktop-only {
             width: 30%;
