--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,39 +1,3 @@
-.menu__box a:nth-child(1) {
-  animation-delay: 0.3s;
-}
-
-.menu__box a:nth-child(2) {
-  animation-delay: 0.6s;
-}
-
-.menu__box a:nth-child(3) {
-  animation-delay: 0.9s;
-}
-
-.menu__box a:nth-child(4) {
-  animation-delay: 1.2s;
-}
-
-.menu__box a:nth-child(5) {
-  animation-delay: 1.5s;
-}
-
-.menu__box a:nth-child(6) {
-  animation-delay: 1.8s;
-}
-
-.menu__box a:nth-child(7) {
-  animation-delay: 2.1s;
-}
-
-.menu__box a:nth-child(8) {
-  animation-delay: 2.4s;
-}
-
-.menu__box a:nth-child(9) {
-  animation-delay: 2.7s;
-}
-
 @keyframes loading {
   0% {
     opacity: 0.1;
@@ -103,6 +67,42 @@
     stroke: var(--pink);
   }
 }
+.menu__box a:nth-child(1) {
+  animation-delay: 0.3s;
+}
+
+.menu__box a:nth-child(2) {
+  animation-delay: 0.6s;
+}
+
+.menu__box a:nth-child(3) {
+  animation-delay: 0.9s;
+}
+
+.menu__box a:nth-child(4) {
+  animation-delay: 1.2s;
+}
+
+.menu__box a:nth-child(5) {
+  animation-delay: 1.5s;
+}
+
+.menu__box a:nth-child(6) {
+  animation-delay: 1.8s;
+}
+
+.menu__box a:nth-child(7) {
+  animation-delay: 2.1s;
+}
+
+.menu__box a:nth-child(8) {
+  animation-delay: 2.4s;
+}
+
+.menu__box a:nth-child(9) {
+  animation-delay: 2.7s;
+}
+
 * {
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
@@ -504,9 +504,9 @@ footer li i {
     flex-direction: row;
     flex-wrap: wrap;
     margin: auto;
-    padding-left: 50px;
     max-width: 1280px;
-    gap: 50px;
+    column-gap: 100px;
+    row-gap: 50px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -567,44 +567,6 @@ footer li i {
 .cards-rest a {
   text-decoration: none;
   color: black;
-}
-
-:root {
-  --pink: #FF79DA;
-  --dark-pink: #9356DC;
-}
-
-.icons {
-  position: absolute;
-  align-self: flex-end;
-  line-height: 0;
-  font-size: 1.2em;
-  margin: 20px 20px 0px 0px;
-  fill: transparent;
-  stroke: var(--dark-pink);
-  stroke-width: 2;
-}
-
-svg {
-  overflow: visible;
-}
-
-path {
-  stroke-dashoffset: 0;
-  stroke-dasharray: 1550;
-  transform-origin: center;
-}
-
-.heart_background {
-  position: absolute;
-  left: 0;
-  right: 0;
-  z-index: -1;
-  stroke: none;
-}
-
-.heart_main:hover path {
-  animation: stroke-animation 2s ease-in-out forwards;
 }
 
 .menu {
@@ -818,6 +780,44 @@ path {
 .order--btn:hover {
   background: linear-gradient(to bottom right, #ae80e5, #fface8);
   box-shadow: 3px 3px 5px #b2b2b2;
+}
+
+:root {
+  --pink: #FF79DA;
+  --dark-pink: #9356DC;
+}
+
+.icons {
+  position: absolute;
+  align-self: flex-end;
+  line-height: 0;
+  font-size: 1.2em;
+  margin: 20px 20px 0px 0px;
+  fill: transparent;
+  stroke: var(--dark-pink);
+  stroke-width: 2;
+}
+
+svg {
+  overflow: visible;
+}
+
+path {
+  stroke-dashoffset: 0;
+  stroke-dasharray: 1550;
+  transform-origin: center;
+}
+
+.heart_background {
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  stroke: none;
+}
+
+.heart_main:hover path {
+  animation: stroke-animation 2s ease-in-out forwards;
 }
 
 /*# sourceMappingURL=style.css.map */
