--- a/sass/Pages/_restaurants.scss
+++ b/sass/Pages/_restaurants.scss
@@ -49,9 +49,9 @@
         flex-direction: row;
         flex-wrap: wrap;
         margin: auto;
-        padding-left: 50px;
         max-width: 1280px;
-        gap: 50px;
+        column-gap: 100px;
+        row-gap: 50px;
     }
     @include tablet-only {
         flex-direction: row;
@@ -92,6 +92,7 @@
             padding: 10px 0px 0px 10px;
             font-size: 1.1em;
         }
+
         &__new {
             height: 30px;
             width: 80px;
@@ -108,46 +109,10 @@
             margin-top: -170px;
             margin-right: 20px;
         }
+
         a {
             text-decoration: none;
             color: black;
         }
-}
-
-//ICONE COEUR//
-:root {
-    --pink: #FF79DA;
-    --dark-pink: #9356DC;
-}
-.icons {
-    position: absolute;
-    align-self: flex-end;
-    line-height: 0;
-    font-size: 1.2em;
-    margin: 20px 20px 0px 0px;
-    fill: transparent;
-    stroke: var(--dark-pink);
-    stroke-width: 2;
-}
-svg {
-   overflow: visible;
-}
-
-path {
-    stroke-dashoffset: 0;
-    stroke-dasharray: 1550;
-    transform-origin: center;
-}
-
-.heart_background {
-    position: absolute;
-    left: 0;
-    right: 0;
-    z-index: -1;
-    stroke: none;
-}
-
-.heart_main:hover path {
-    animation: stroke-animation 2s ease-in-out forwards;
 }
 
