--- a/sass/Utils/_keyframes.scss
+++ b/sass/Utils/_keyframes.scss
@@ -1,4 +1,4 @@
-//ANIMATION
+//ANIMATION CHARGEMENT PAGE ACCUEIL//
 @keyframes loading {
     0% {
         opacity: 0.10
@@ -18,6 +18,7 @@
     }
   }
 
+//ANIMATION ENTRÉE DES BOUTONS MENU-PLATS//
 @keyframes fade-in {
     0% {
         opacity: 0;
