--- a/sass/Utils/_mixin.scss
+++ b/sass/Utils/_mixin.scss
@@ -1,7 +1,4 @@
-@mixin button-shadow ($color) {
-    box-shadow: 3px 3px 5px $color;
-}
-
+//INITIALISATION FLEX//
 @mixin flex-column {
     display: flex;
     flex-direction: column;
@@ -13,20 +10,10 @@
     justify-content: center;
 }
 
-@mixin title-format {
-    font-weight: bold;
-    padding: 20px 0px 0px 20px;
-}
-
 @mixin funct-btn-box {
     display: flex;
     justify-content: center;
     width: 90%;
-}
-
-@mixin  menu-border-radius {
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
 }
 
 @mixin btn-box-center {
@@ -36,12 +23,30 @@
     justify-content: space-around;
 }
 
+//FORMATAGE TEXTE//
+@mixin title-format {
+    font-weight: bold;
+    padding: 20px 0px 0px 20px;
+}
+
 @mixin ellipsis {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
+//OMBRES BOUTONS//
+@mixin button-shadow ($color) {
+    box-shadow: 3px 3px 5px $color;
+}
+
+//BORDURES ARRONDIES//
+@mixin  menu-border-radius {
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+//DÉGRADÉ COULEUR BOUTONS PRINCIPAUX//
 @mixin color-swap {
     $color-1: lighten($color-primary, 10%);
     $color-2: lighten($color-secondary, 10%);
@@ -49,6 +54,7 @@
     background: linear-gradient(to bottom right, $color-1, $color-2);
     box-shadow: 3px 3px 5px $color-3;
 }
+
 // MEDIA QUERIES // 
 @mixin tablet-only {
     @media screen and (min-width: map-get($breakpoints, tablet)){
@@ -66,9 +72,4 @@
     @media screen and (min-width: map-get($breakpoints, desktop)){
         @content;
     }
-}
-
-// BOUCLES //
-@for $i from 1 to 10 {
-    .menu__box a:nth-child(#{$i}) {animation-delay: $i * 0.30s;}
 }
