--- a/sass/Composants/_heart-icons.scss
+++ b/sass/Composants/_heart-icons.scss
@@ -6,7 +6,7 @@
 
 .icons {
     position: absolute;
-    align-self: flex-end;
+    right: 0;
     line-height: 0;
     font-size: 1.2em;
     margin: 20px 20px 0px 0px;
