--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,7 +44,7 @@
 }
 @keyframes stroke-animation {
   0% {
-    stroke-dashoffset: 0;
+    stroke-dashoffset: 550;
   }
   20% {
     stroke-dashoffset: 1550;
@@ -591,7 +591,7 @@ footer li i {
   display: flex;
   width: 87%;
   justify-content: flex-end;
-  padding-bottom: 12px;
+  padding-top: 30px;
 }
 @media screen and (min-width: 1024px) {
   .menu__heart {
@@ -789,7 +789,7 @@ footer li i {
 
 .icons {
   position: absolute;
-  align-self: flex-end;
+  right: 0;
   line-height: 0;
   font-size: 1.2em;
   margin: 20px 20px 0px 0px;
