--- a/sass/Pages/_menu.scss
+++ b/sass/Pages/_menu.scss
@@ -27,7 +27,7 @@
         display: flex;
         width: 87%;
         justify-content: flex-end;
-        padding-bottom: 12px;
+        padding-top: 30px;
     }
 
     &__subtitle {
