--- a/sass/Pages/_menu.scss
+++ b/sass/Pages/_menu.scss
@@ -27,10 +27,9 @@
         display: flex;
         width: 87%;
         justify-content: flex-end;
-        padding-top: 30px;
         position: absolute;
         right: 0;
-        top: 0;
+        top: 29px;
         line-height: 0;
         font-size: 1.2em;
         margin: 20px 20px 0px 0px;
